# NewsGrid

./: .env-sample  .gitignore  Dockerfile  README.md  api.py  compose.yml  llm.py  makefile  pyproject.toml  settings.py  worker_analyst.py  worker_researcher.py
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 8591518df155_initial_migration.py
app/: py.typed  startup.py
app/agents/: agent_analyst.py  agent_research.py  base.py
app/api/: dependencies.py
app/api/analyze/: controller.py  routes.py  schemas.py
app/api/auth/: controller.py  routes.py  schemas.py
app/api/report/: controller.py  routes.py  schemas.py
app/api/status/: controller.py  routes.py  schemas.py
app/api/user/: controller.py  routes.py  schemas.py
app/core/: container.py
app/domain/: exceptions.py
app/domain/auth/: repositories.py  use_cases.py
app/domain/messaging/: entities.py  repositories.py  use_cases.py
app/domain/rate_limit/: entities.py  repositories.py  use_cases.py
app/domain/report/: entities.py  repositories.py  use_cases.py
app/domain/status/: entities.py  use_cases.py
app/domain/user/: repositories.py  use_cases.py
app/infrastructure/agents/: agent_analyst.py  agent_research.py  base_agent.py  llm_client.py
app/infrastructure/cache/: redis_client.py  task_status_service.py
app/infrastructure/messaging/: broker.py  rabbitmq_broker.py
app/infrastructure/repositories/messaging/: send_to_queue.py
app/infrastructure/repositories/redis/: cache_repository.py  rate_limit_repository.py  status_repository.py
app/infrastructure/repositories/sql/: auth_repository.py  report_repository.py  user_repository.py
app/infrastructure/workers/: base_worker.py  worker_analyst.py  worker_researcher.py
app/models/: __init__.py  reports.py  user.py
app/services/: auth_service.py  auth_service_sql.py  interfaces.py  rate_limit_service.py  report_cache_service.py  report_service.py  report_service_sql.py  task_status_service.py
app/workers/: worker_analyst.py  worker_researcher.py
app2/api/auth/: controller.py  routes.py  schemas.py
app2/api/report/: controller.py  routes.py  schemas.py
app2/api/status/: controller.py  routes.py  schemas.py
app2/api/user/: controller.py  routes.py  schemas.py
app2/core/: container.py  database.py
app2/domain/auth/: entities.py  repositories.py  use_cases.py
app2/domain/report/: repositories.py  use_cases.py
app2/domain/status/: repositories.py  use_cases.py
app2/domain/user/: entities.py  repositories.py  use_cases.py
app2/infrastructure/agents/: agent_analyst.py  agent_research.py
app2/infrastructure/repositories/: redis_status_repository.py  sql_report_repository.py  sql_user_repository.py
app2/infrastructure/repositories/redis/: cache_repository.py
app2/infrastructure/repositories/sql/: auth_repository.py
app2/infrastructure/workers/: worker_researcher.py
app2/models/: reports.py  user.py
docs/: AUTH.MD  CHECKPOINT.MD  CONCEPTS.MD  DOCKERIZADO.md  RUFFS.MD  TESTES.MD
scripts/: seed_initial.py  start_workers.py
tests/: conftest.py  test_agents.py  test_analyze.py  test_auth.py  test_create_agents.py  test_report.py  test_repositories.py  test_send_to_queue.py  test_tasks_status.py  test_use_cases_auth.py  test_use_cases_report.py  test_users.py  test_workers.py
tests/factory/: user_factory.py
utils/: base_agent.py  base_worker.py  broker.py  exceptions.py  llm.py  logging.py  py.typed  redis_client.py  reporting.py  security.py  send_to_queue.py  settings.py  tasks_controller.py
