[project]
name = "newsletterchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.24",
    "brave-search>=0.1.0",
    "fastapi>=0.128.0",
    "groq>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pika>=1.3.2",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.3.0",
    "redis>=7.1.0",
    "uvicorn>=0.40.0",
]
# uv run pytest --cov=app --cov-report=html
[dependency-groups]
dev = [
    "httpx>=0.25.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
