[project]
name = "newsletterchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.24",
    "brave-search>=0.1.0",
    "fastapi>=0.128.0",
    "groq>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pika>=1.3.2",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "redis>=7.1.0",
    "uvicorn>=0.40.0",
]
# uv run pytest --cov=app --cov-report=html
[dependency-groups]
dev = [
    "httpx>=0.25.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
exclude = [".git", ".venv", "__pycache__", "build", "dist", "htmlcov", "logs"]

# Mesmo que Black
line-length = 88
indent-width = 4

# Versão alvo do Python
target-version = "py312"

[tool.ruff.lint]
# Habilitar regras padrão: pycodestyle (E), Pyflakes (F), etc.
select = ["E4", "E7", "E9", "F", "B", "I", "UP", "SIM"]

# Ignorar regras específicas, como comprimento de linha
ignore = ["E501"]

# Permitir correção automática para todas as regras habilitadas
fixable = ["ALL"]

# Regras que não podem ser corrigidas automaticamente
unfixable = ["B"]

[tool.ruff.format]
# Usar aspas duplas para strings, como Black
quote-style = "double"

# Indentar com espaços
indent-style = "space"

# Detectar automaticamente o final de linha
line-ending = "auto"

# Formatar código em docstrings
docstring-code-format = true
